# slog-error-chain

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs  derive.rs  nested-values.rs
slog-error-chain-derive/: Cargo.toml
slog-error-chain-derive/src/: lib.rs
src/: lib.rs  nested_values.rs
