[package]
name = "slog-error-chain"
description = "slogging error cause chains"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
slog = "2.7"
#slog = { version = "2.7", features = ["dynamic-keys"]}

# requires `nested-values` feature
serde = { version = "1.0", optional = true }
erased-serde = { version = "0.3", optional = true }

# requires `derive` feature
slog-error-chain-derive = { path = "slog-error-chain-derive", optional = true }

[features]
derive = ["slog-error-chain-derive"]
nested-values = [
    "serde",
    "erased-serde",
    "slog/nested-values",
    "slog-error-chain-derive/nested-values",
    "slog-json/nested-values",
]

[dev-dependencies]
thiserror = "1.0"
serde_json = "1.0"
slog-term = "2.9"
slog-json = "2.6"

[[example]]
name = "derive"
required-features = ["derive"]

[[example]]
name = "nested-values"
required-features = ["derive", "nested-values"]
